fix: ollama streaming response parsing

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_BASE_URL=
 OLLAMA_MODEL=qwen2.5
 OLLAMA_EMBEDDING_MODEL=nomic-embed-text
-CHROMA_PATH=./chroma_db
+CHROMA_PATH=
 CHUNK_SIZE=1000
 CHUNK_OVERLAP=200
 TOP_K_RESULTS=4
