--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "chromadb>=1.5.1",
+    "chromadb==0.5.23",
     "fastapi>=0.129.2",
     "httpx>=0.28.1",
     "pdfplumber>=0.11.9",
