--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pdfplumber>=0.11.9",
     "pydantic-settings>=2.13.1",
     "pypdf>=6.7.2",
+    "pytest>=9.0.2",
     "python-multipart>=0.0.22",
     "ruff>=0.15.2",
     "sentence-transformers>=5.2.3",
