--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic-settings>=2.13.1",
     "pypdf>=6.7.2",
     "pytest>=9.0.2",
+    "python-dotenv>=1.2.1",
     "python-multipart>=0.0.22",
     "ruff>=0.15.2",
     "sentence-transformers>=5.2.3",
