--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 OLLAMA_BASE_URL=
-OLLAMA_MODEL=qwen2.5
-OLLAMA_EMBEDDING_MODEL=nomic-embed-text
+OLLAMA_MODEL=
+OLLAMA_EMBEDDING_MODEL=
 CHROMA_PATH=
-CHUNK_SIZE=1000
-CHUNK_OVERLAP=200
-TOP_K_RESULTS=4
-MAX_HISTORY=10
+CHUNK_SIZE=
+CHUNK_OVERLAP=
+TOP_K_RESULTS=
+MAX_HISTORY=
+DATABASE_URL=
+JWT_SECRET=
+JWT_ALGORITHM=
+ACCESS_TOKEN_EXPIRE_MINUTES=
+REFRESH_TOKEN_EXPIRE_DAYS=
