--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,21 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "alembic>=1.18.4",
+    "asyncpg>=0.31.0",
     "chromadb==0.5.23",
     "fastapi>=0.129.2",
     "httpx>=0.28.1",
+    "passlib[bcrypt]>=1.7.4",
     "pdfplumber>=0.11.9",
     "pydantic-settings>=2.13.1",
     "pypdf>=6.7.2",
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
+    "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.22",
     "ruff>=0.15.2",
     "sentence-transformers>=5.2.3",
+    "sqlalchemy>=2.0.47",
     "uvicorn>=0.41.0",
 ]
