--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,14 @@ requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.18.4",
     "asyncpg>=0.31.0",
+    "bcrypt==4.1.0",
     "chromadb==0.5.23",
     "fastapi>=0.129.2",
     "httpx>=0.28.1",
     "passlib[bcrypt]>=1.7.4",
     "pdfplumber>=0.11.9",
     "pydantic-settings>=2.13.1",
+    "pydantic[email]>=2.12.5",
     "pypdf>=6.7.2",
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
