--- a/requirements_docker.txt
+++ b/requirements_docker.txt
@@ -1,9 +1,11 @@
+alembic==1.18.4
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 asgiref==3.11.1
+asyncpg==0.31.0
 backoff==2.2.1
-bcrypt==5.0.0
+bcrypt==4.1.0
 build==1.4.0
 certifi==2026.1.4
 cffi==2.0.0
@@ -12,32 +14,56 @@ chroma-hnswlib==0.7.6
 chromadb==0.5.23
 click==8.3.1
 cryptography==46.0.5
+cuda-bindings==12.9.4
+cuda-pathfinder==1.3.4
 distro==1.9.0
+dnspython==2.8.0
 durationpy==0.10
+ecdsa==0.19.1
+email-validator==2.3.0
 fastapi==0.129.2
 filelock==3.24.3
 flatbuffers==25.12.19
 fsspec==2026.2.0
 googleapis-common-protos==1.72.0
+greenlet==3.3.2
 grpcio==1.78.1
 h11==0.16.0
 hf-xet==1.2.0
 httpcore==1.0.9
 httptools==0.7.1
 httpx==0.28.1
-huggingface-hub==0.36.2
+huggingface_hub==0.36.2
 idna==3.11
-importlib-metadata==8.7.1
-importlib-resources==6.5.2
+importlib_metadata==8.7.1
+importlib_resources==6.5.2
 iniconfig==2.3.0
-jinja2==3.1.6
+Jinja2==3.1.6
 joblib==1.5.3
 kubernetes==35.0.0
+Mako==1.3.10
 markdown-it-py==4.0.0
-markupsafe==3.0.3
+MarkupSafe==3.0.3
 mdurl==0.1.2
 mmh3==5.2.0
+mpmath==1.3.0
+networkx==3.6.1
 numpy==2.4.2
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.4.5
+nvidia-nvtx-cu12==12.8.90
 oauthlib==3.3.1
 onnxruntime==1.24.2
 opentelemetry-api==1.39.1
@@ -53,44 +79,54 @@ opentelemetry-util-http==0.60b1
 orjson==3.11.7
 overrides==7.7.0
 packaging==26.0
-pdfminer-six==20251230
+pdfminer.six==20251230
 pdfplumber==0.11.9
 pillow==12.1.1
-pip==24.0
 pluggy==1.6.0
 posthog==7.9.3
 protobuf==6.33.5
+pyasn1==0.6.2
 pycparser==3.0
 pydantic==2.12.5
-pydantic-core==2.41.5
 pydantic-settings==2.13.1
-pygments==2.19.2
+pydantic_core==2.41.5
+Pygments==2.19.2
 pypdf==6.7.2
 pypdfium2==5.5.0
-pypika==0.51.1
-pyproject-hooks==1.2.0
+PyPika==0.51.1
+pyproject_hooks==1.2.0
 pytest==9.0.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-jose==3.5.0
 python-multipart==0.0.22
-pyyaml==6.0.3
+PyYAML==6.0.3
 regex==2026.2.19
 requests==2.32.5
 requests-oauthlib==2.0.0
 rich==14.3.3
+rsa==4.9.1
 ruff==0.15.2
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.17.0
+sentence-transformers==5.2.3
 setuptools==82.0.0
 shellingham==1.5.4
 six==1.17.0
+SQLAlchemy==2.0.47
 starlette==0.52.1
+sympy==1.14.0
 tenacity==9.1.4
 threadpoolctl==3.6.0
 tokenizers==0.20.3
+torch==2.10.0
 tqdm==4.67.3
+transformers==4.46.3
+triton==3.6.0
 typer==0.24.1
-typer-slim==0.24.0
-typing-extensions==4.15.0
 typing-inspection==0.4.2
+typing_extensions==4.15.0
 urllib3==2.6.3
 uvicorn==0.41.0
 uvloop==0.22.1
