--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "bcrypt==4.1.0",
     "chromadb==0.5.23",
     "fastapi>=0.129.2",
+    "fastembed>=0.7.4",
     "httpx>=0.28.1",
     "passlib[bcrypt]>=1.7.4",
     "pdfplumber>=0.11.9",
@@ -22,6 +23,7 @@ dependencies = [
     "python-multipart>=0.0.22",
     "ruff>=0.15.2",
     "sentence-transformers>=5.2.3",
+    "slowapi>=0.1.9",
     "sqlalchemy>=2.0.47",
     "uvicorn>=0.41.0",
 ]
